rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-rmq
  template:
    metadata:
      labels:
        components: conv-rmq
    spec:
      containers:
        - name: conv-rmq
          image: rabbitmq:4.1.2
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
          volumeMounts:
            - name: rmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
