rmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: conv-rmq
