ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingressconv
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    app.kubernetes.io/name: myingressconv
spec:
  ingressClassName: nginx
  rules:
    - host: conv.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: conv-app-clusterip
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: conv-api-clusterip
                port:
                  number: 3000
